--- a/src/BuyerList/BuyerList.scss
+++ b/src/BuyerList/BuyerList.scss
@@ -1,7 +1,7 @@
 .buyer-list-container {
   display: flex;
-  border: 2px solid #ccc;
   border-radius: 5px;
+  max-height: 50px;
 }
 
 .buyer-list-row {
